--- a/book_display.html
+++ b/book_display.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>home page</title>
+  <title>Book Display</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -46,45 +46,7 @@
   </nav>
 
   <div class="container mt-4">
-
-    <div class="row bg-secondary rounded-3">
-      <div class="col-12 col-md-6">
-        <div class="p-4">
-          <h4 class="text-center mt-4 text-gray">Welcome To The World Of Books</h4>
-          <p class="mt-3  text-gray">Hi there and welcome to my website</p>
-          <p class=" text-gray">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus, provident ducimus sed
-            voluptas, quidem, praesentium accusantium nostrum quisquam blanditiis magni repellat minima! Cum odio alias
-            praesentium labore ducimus. Magnam, nam!</p>
-          <p class=" text-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto tenetur magni molestias
-          </p>
-          <p class="mb-0 text-gray">All the best</p>
-          <p class="text-light"><b>Pramod G</b></p>
-          <p class="text-end">
-            <a href="book_display.html" class="btn btn-outline-light">Browse all Books</a>
-          </p>
-        </div>
-      </div>
-      <div class="col-12 col-md-6 p-0">
-        <img src="img/bg1.jpg" alt="" class="img img-fluid home-image-border">
-      </div>
-    </div>
-
-    <div class="row mt-4 bg-secondary p-4 rounded-3 gy-2">
-      <div class="col-lg-6 col-12">
-        <h4 class="mb-0 text-center text-light">Sign up for update my email</h4>
-      </div>
-      <div class="col-lg-6 col-12">
-        <form class="d-flex w-100"> <!-- d-flex is an alterantive of float-->
-          <div class="home-email-input">
-            <input type="text" class="form-control bt-light " placeholder="Enter Email" value="">
-          </div>
-          <button type="submit" class="btn btn-light ms-2">Subscribe</button>
-        </form>
-      </div>
-    </div>
-
     <div class="row gy-5 gx-5 mt-1"> <!--gy for y axis gutter, gx for x axis gutter-->
-
       <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3">
         <div class="card">
           <img src="img/books/hp_1.jpg" class="card-img-top book-image-card-height" alt="book_image">
@@ -181,6 +143,104 @@
       </div>
 
     </div>
+
+    <div class="row gy-5 gx-5 mt-1"> <!--gy for y axis gutter, gx for x axis gutter-->
+        <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3">
+          <div class="card">
+            <img src="img/books/hp_1.jpg" class="card-img-top book-image-card-height" alt="book_image">
+            <div class="card-body">
+              <h5 class="card-title">Harry Potter and the Philosopher's Stone</h5>
+              <p class="card-text">Escape to Hogwarts with the unmissable series that has sparked a lifelong ...</p>
+              <a href="book_single_hp_1.html" class="btn btn-primary w-100">View Book</a>
+            </div>
+          </div>
+        </div>
+  
+        <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3">
+          <div class="card">
+            <img src="img/books/power_mind.jpg" class="card-img-top book-image-card-height" alt="book_image">
+            <div class="card-body">
+              <h5 class="card-title">The Power of Your Subconscious Mind:</h5>
+              <p class="card-text">The Power of Your Subconscious Mind is one of the most promising self improvement books
+                that..</p>
+              <a href="book_single_power_of_mind.html" class="btn btn-primary w-100">View Book</a>
+            </div>
+          </div>
+        </div>
+  
+        <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3">
+          <div class="card">
+            <img src="img/books/alchemist.jpg" class="card-img-top book-image-card-height" alt="book_image">
+            <div class="card-body">
+              <h5 class="card-title">The Alchemist</h5>
+              <p class="card-text">Paulo Coelho's enchanting novel has inspired a devoted following around the world. This
+                story, dazzling in its powerful ...</p>
+              <a href="book_single_alp.html" class="btn btn-primary w-100">View Book</a>
+            </div>
+          </div>
+        </div>
+  
+        <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3">
+          <div class="card">
+            <img src="img/books/monk_old.jpg" class="card-img-top book-image-card-height" alt="book_image">
+            <div class="card-body">
+              <h5 class="card-title">The Monk Who Sold His Ferrari</h5>
+              <p class="card-text">A renowned inspirational fiction, The Monk Who Sold His Ferrari is a revealing story
+                that offers...</p>
+              <a href="book_single_monk.html" class="btn btn-primary w-100">View Book</a>
+            </div>
+          </div>
+        </div>
+  
+        <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3">
+          <div class="card">
+            <img src="img/books/fvsf.jpg" class="card-img-top book-image-card-height" alt="book_image">
+            <div class="card-body">
+              <h5 class="card-title">Ford versus Ferrari: The battle for supremacy at Le Mans</h5>
+              <p class="card-text">What happened when America's richest car company ..</p>
+              <a href="book_single_fvf.html" class="btn btn-primary w-100">View Book</a>
+            </div>
+          </div>
+        </div>
+  
+        <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3">
+          <div class="card">
+            <img src="img/books/ghl.jpg" class="card-img-top book-image-card-height" alt="book_image">
+            <div class="card-body">
+              <h5 class="card-title">GO LIKE HELL</h5>
+              <p class="card-text">
+                As told in the film Ford v. Ferrari, Go Like Hell transports readers to a risk-filled, glorious time in
+                this brilliant portrait of
+              </p>
+              <a href="book_single_glh.html" class="btn btn-primary w-100">View Book</a>
+            </div>
+          </div>
+        </div>
+  
+        <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3">
+          <div class="card">
+            <img src="img/books/bhot.jpg" class="card-img-top book-image-card-height" alt="book_image">
+            <div class="card-body">
+              <h5 class="card-title">A Brief History Of Time : From Big Bang To Black Holes</h5>
+              <p class="card-text">These are just some of the questions considered..</p>
+              <a href="book_single_bhot.html" class="btn btn-primary w-100">View Book</a>
+            </div>
+          </div>
+        </div>
+  
+        <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3">
+          <div class="card">
+            <img src="img/books/hp_2.jpg" class="card-img-top book-image-card-height" alt="book_image">
+            <div class="card-body">
+              <h5 class="card-title">Harry Potter and the Prisoner of Azkaban</h5>
+              <p class="card-text">When the Knight Bus crashes through the darkness and screeches to a halt in front of
+                him ..</p>
+              <a href="book_single_hp_2.html" class="btn btn-primary w-100">View Book</a>
+            </div>
+          </div>
+        </div>
+  
+      </div>
 
   </div>
 
