--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 
   <div class="container mt-4">
 
-    <div class="row bg-secondary rounded-3">
+    <div class="row bg-secondary rounded-3">  <!--border rounded--> 
       <div class="col-12 col-md-6">
         <div class="p-4">
-          <h4 class="text-center mt-4 text-gray">Welcome To The World Of Books</h4>
+          <h4 class="text-center mt-4 mb-4 text-gray">Welcome To The World Of Books</h4>
           <p class="mt-3  text-gray">Hi there and welcome to my website</p>
           <p class=" text-gray">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus, provident ducimus sed
             voluptas, quidem, praesentium accusantium nostrum quisquam blanditiis magni repellat minima! Cum odio alias
@@ -60,11 +60,11 @@
           <p class="mb-0 text-gray">All the best</p>
           <p class="text-light"><b>Pramod G</b></p>
           <p class="text-end">
-            <a href="book_display.html" class="btn btn-outline-light">Browse all Books</a>
+            <a href="book_display.html" class="btn btn-outline-light"><b>Browse all Books</b></a>
           </p>
         </div>
       </div>
-      <div class="col-12 col-md-6 p-0">
+      <div class="col-12 col-md-6 p-0 ">
         <img src="img/bg1.jpg" alt="" class="img img-fluid home-image-border">
       </div>
     </div>
