--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@
       <div class="row">
         <div class="col-md-12">
           <div class="login">
-            <form class="shadow-sm p-4 card">
+            <form class="p-4 card">
               <h3 class="text-center mb-4">WELCOME</h3>
               <div class="form-group mb-2">
                 <label for="exampleInputEmail1">Email</label>
@@ -31,7 +31,7 @@
                   type="email"
                   class="form-control"
                   id="exampleInputEmail1"
-                  aria-describedby="emailHelp"
+                 
                   placeholder="Enter email"
                 />
               </div>
@@ -50,11 +50,11 @@
               <a href="#" class="link">Forgot password?</a>
 
               <div class="mt-4">
-                <a class="btn d-block login-button">Login</a>
+                <a class="btn w-100 login-button" href="/index.html">Login</a>
 
                 <a
-                  href="sign up page.html"
-                  class="d-block btn btn-primary-outline"
+                  href="/sign_up.html"
+                  class="w-100 btn btn-primary-outline"
                   >Signup</a
                 >
               </div>
