--- a/sign_up.html
+++ b/sign_up.html
@@ -23,14 +23,14 @@
       <div class="row">
         <div class="col-md-12">
           <div class="login">
-            <form class="shadow-sm p-4 card">
+            <form class=" p-4 card">
               <h3 class="text-center mb-4">Signup</h3>
               <div class="form-group mb-2">
-                <label for="">Phone</label>
+                <label for="">Phone number</label>
                 <input
                   type="text"
                   class="form-control"
-                  placeholder="Enter Phone"
+                  placeholder="Enter Phone number"
                 />
               </div>
               <div class="form-group mb-2">
@@ -63,10 +63,10 @@
               </div>
 
               <div class="mt-4">
-                <a class="btn d-block login-button">Signup</a>
+                <a class="btn w-100 login-button" href="/index.html">Signup</a>
 
-                <a href="sign up page.html" class="d-block text-center mt-3"
-                  >Already a member ?</a
+                <a href="/login.html" class=" w-100 text-center mt-3"
+                  > Already a member?</a
                 >
               </div>
             </form>
