--- a/index.html
+++ b/index.html
@@ -51,11 +51,9 @@
       <div class="col-12 col-md-6">
         <div class="p-4">
           <h4 class="text-center mt-4 mb-4 text-gray">Welcome To The World Of Books</h4>
-          <p class="mt-3  text-gray">Hi there and welcome to my website</p>
-          <p class=" text-gray">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus, provident ducimus sed
-            voluptas, quidem, praesentium accusantium nostrum quisquam blanditiis magni repellat minima! Cum odio alias
-            praesentium labore ducimus. Magnam, nam!</p>
-          <p class=" text-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto tenetur magni molestias
+          <p class="mt-3  text-gray">Hi there and welcome.</p>
+          <p class=" text-gray">Books are windows into countless worlds, offering escape, knowledge, and empathy in equal measure. They're portals to the past, present, and future, allowing us to explore realms both real and imaginary. Through books, we can traverse the depths of human emotion, experience the thrill of adventure, or delve into the complexities of the human condition. </p>
+          <p class=" text-gray">They inspire, educate, and entertain, shaping our thoughts and perspectives with each turn of the page. In a world of constant change, books remain steadfast companions, offering solace and insight amidst the chaos of life.
           </p>
           <p class="mb-0 text-gray">All the best</p>
           <p class="text-light"><b>Pramod G</b></p>
