--- a/book_single_hp_1.html
+++ b/book_single_hp_1.html
@@ -75,7 +75,7 @@
             </div>
         </div>
         <div class="row mt-0 gy-5 gx-5">
-            <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3">
+            <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3 col-sm-8">
                 <div class="card">
                     <img src="img/books/hp_2.jpg" class="card-img-top book-image-card-height" alt="book_image">
                     <div class="card-body">
@@ -88,7 +88,7 @@
                 </div>
             </div>
 
-            <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3">
+            <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3 col-sm-8">
                 <div class="card">
                     <img src="img/books/hp_2.jpg" class="card-img-top book-image-card-height" alt="book_image">
                     <div class="card-body">
@@ -101,7 +101,7 @@
                 </div>
             </div>
 
-            <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3">
+            <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3 col-sm-8">
                 <div class="card">
                     <img src="img/books/hp_2.jpg" class="card-img-top book-image-card-height" alt="book_image">
                     <div class="card-body">
@@ -114,7 +114,7 @@
                 </div>
             </div>
 
-            <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3">
+            <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3 col-sm-8">
                 <div class="card">
                     <img src="img/books/hp_2.jpg" class="card-img-top book-image-card-height" alt="book_image">
                     <div class="card-body">
