--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
       </div>
     </div>
 
-    <div class="row gy-5 gx-5 mt-1"> <!--gy for y axis gutter, gx for x axis gutter-->
+    <div class="row gy-5 gx-5 mt-1 mb-4"> <!--gy for y axis gutter, gx for x axis gutter-->
 
-      <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3">
+      <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3 col-sm-8">
         <div class="card">
           <img src="img/books/hp_1.jpg" class="card-img-top book-image-card-height" alt="book_image">
           <div class="card-body">
@@ -94,7 +94,7 @@
         </div>
       </div>
 
-      <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3">
+      <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3 col-sm-8">
         <div class="card">
           <img src="img/books/power_mind.jpg" class="card-img-top book-image-card-height" alt="book_image">
           <div class="card-body">
@@ -106,7 +106,7 @@
         </div>
       </div>
 
-      <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3">
+      <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3 col-sm-8">
         <div class="card">
           <img src="img/books/alchemist.jpg" class="card-img-top book-image-card-height" alt="book_image">
           <div class="card-body">
@@ -118,7 +118,7 @@
         </div>
       </div>
 
-      <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3">
+      <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3 col-sm-8">
         <div class="card">
           <img src="img/books/monk_old.jpg" class="card-img-top book-image-card-height" alt="book_image">
           <div class="card-body">
@@ -130,7 +130,7 @@
         </div>
       </div>
 
-      <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3">
+      <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3 col-sm-8">
         <div class="card">
           <img src="img/books/fvsf.jpg" class="card-img-top book-image-card-height" alt="book_image">
           <div class="card-body">
@@ -141,7 +141,7 @@
         </div>
       </div>
 
-      <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3">
+      <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3 col-sm-8">
         <div class="card">
           <img src="img/books/ghl.jpg" class="card-img-top book-image-card-height" alt="book_image">
           <div class="card-body">
@@ -155,7 +155,7 @@
         </div>
       </div>
 
-      <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3">
+      <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3 col-sm-8">
         <div class="card">
           <img src="img/books/bhot.jpg" class="card-img-top book-image-card-height" alt="book_image">
           <div class="card-body">
@@ -166,7 +166,7 @@
         </div>
       </div>
 
-      <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3">
+      <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3 col-sm-8">
         <div class="card">
           <img src="img/books/hp_2.jpg" class="card-img-top book-image-card-height" alt="book_image">
           <div class="card-body">
@@ -182,8 +182,8 @@
 
   </div>
 
-  <div class="container-fluid mt-4">
-    <footer class="py-3" style="background-color: #c5c6c6;">
+  <div class="container-fluid ">   
+    <footer class="py-4" style="background-color: #c5c6c6;">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
         <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Home</a></li>
         <li class="nav-item"><a href="book_display.html" class="nav-link px-2 text-muted">Book display</a></li>
