--- a/book_display.html
+++ b/book_display.html
@@ -47,7 +47,7 @@
 
   <div class="container mt-4">
     <div class="row gy-5 gx-5 mt-1"> <!--gy for y axis gutter, gx for x axis gutter-->
-      <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3">
+      <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3 col-sm-8">
         <div class="card">
           <img src="img/books/hp_1.jpg" class="card-img-top book-image-card-height" alt="book_image">
           <div class="card-body">
@@ -58,7 +58,7 @@
         </div>
       </div>
 
-      <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3">
+      <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3 col-sm-8">
         <div class="card">
           <img src="img/books/power_mind.jpg" class="card-img-top book-image-card-height" alt="book_image">
           <div class="card-body">
@@ -70,7 +70,7 @@
         </div>
       </div>
 
-      <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3">
+      <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3 col-sm-8">
         <div class="card">
           <img src="img/books/alchemist.jpg" class="card-img-top book-image-card-height" alt="book_image">
           <div class="card-body">
@@ -82,7 +82,7 @@
         </div>
       </div>
 
-      <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3">
+      <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3 col-sm-8">
         <div class="card">
           <img src="img/books/monk_old.jpg" class="card-img-top book-image-card-height" alt="book_image">
           <div class="card-body">
@@ -94,7 +94,7 @@
         </div>
       </div>
 
-      <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3">
+      <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3 col-sm-8">
         <div class="card">
           <img src="img/books/fvsf.jpg" class="card-img-top book-image-card-height" alt="book_image">
           <div class="card-body">
@@ -105,7 +105,7 @@
         </div>
       </div>
 
-      <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3">
+      <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3 col-sm-8">
         <div class="card">
           <img src="img/books/ghl.jpg" class="card-img-top book-image-card-height" alt="book_image">
           <div class="card-body">
@@ -119,7 +119,7 @@
         </div>
       </div>
 
-      <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3">
+      <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3 col-sm-8">
         <div class="card">
           <img src="img/books/bhot.jpg" class="card-img-top book-image-card-height" alt="book_image">
           <div class="card-body">
@@ -130,7 +130,7 @@
         </div>
       </div>
 
-      <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3">
+      <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3 col-sm-8">
         <div class="card">
           <img src="img/books/hp_2.jpg" class="card-img-top book-image-card-height" alt="book_image">
           <div class="card-body">
@@ -145,7 +145,7 @@
     </div>
 
     <div class="row gy-5 gx-5 mt-1"> <!--gy for y axis gutter, gx for x axis gutter-->
-        <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3">
+        <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3 col-sm-8">
           <div class="card">
             <img src="img/books/hp_1.jpg" class="card-img-top book-image-card-height" alt="book_image">
             <div class="card-body">
@@ -156,7 +156,7 @@
           </div>
         </div>
   
-        <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3">
+        <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3 col-sm-8">
           <div class="card">
             <img src="img/books/power_mind.jpg" class="card-img-top book-image-card-height" alt="book_image">
             <div class="card-body">
@@ -168,7 +168,7 @@
           </div>
         </div>
   
-        <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3">
+        <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3 col-sm-8">
           <div class="card">
             <img src="img/books/alchemist.jpg" class="card-img-top book-image-card-height" alt="book_image">
             <div class="card-body">
@@ -180,7 +180,7 @@
           </div>
         </div>
   
-        <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3">
+        <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3 col-sm-8">
           <div class="card">
             <img src="img/books/monk_old.jpg" class="card-img-top book-image-card-height" alt="book_image">
             <div class="card-body">
@@ -192,7 +192,7 @@
           </div>
         </div>
   
-        <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3">
+        <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3 col-sm-8">
           <div class="card">
             <img src="img/books/fvsf.jpg" class="card-img-top book-image-card-height" alt="book_image">
             <div class="card-body">
@@ -203,7 +203,7 @@
           </div>
         </div>
   
-        <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3">
+        <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3 col-sm-8">
           <div class="card">
             <img src="img/books/ghl.jpg" class="card-img-top book-image-card-height" alt="book_image">
             <div class="card-body">
@@ -217,7 +217,7 @@
           </div>
         </div>
   
-        <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3">
+        <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3 col-sm-8">
           <div class="card">
             <img src="img/books/bhot.jpg" class="card-img-top book-image-card-height" alt="book_image">
             <div class="card-body">
@@ -228,7 +228,7 @@
           </div>
         </div>
   
-        <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3">
+        <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3 col-sm-8">
           <div class="card">
             <img src="img/books/hp_2.jpg" class="card-img-top book-image-card-height" alt="book_image">
             <div class="card-body">
