--- a/book_single_bhot.html
+++ b/book_single_bhot.html
@@ -69,7 +69,7 @@
             </div>
         </div>
         <div class="row mt-0 gy-5 gx-5">
-            <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3">
+            <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3 col-sm-8">
                 <div class="card">
                     <img src="img/books/alchemist.jpg" class="card-img-top book-image-card-height" alt="book_image">
                     <div class="card-body">
@@ -81,7 +81,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3">
+            <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3 col-sm-8">
                 <div class="card">
                     <img src="img/books/monk_old.jpg" class="card-img-top book-image-card-height" alt="book_image">
                     <div class="card-body">
@@ -93,7 +93,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3">
+            <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3 col-sm-8">
                 <div class="card">
                   <img src="img/books/power_mind.jpg" class="card-img-top book-image-card-height" alt="book_image">
                   <div class="card-body">
@@ -104,7 +104,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3">
+              <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3 col-sm-8">
                 <div class="card">
                   <img src="img/books/fvsf.jpg" class="card-img-top book-image-card-height" alt="book_image">
                   <div class="card-body">
