--- a/book_single_fvf.html
+++ b/book_single_fvf.html
@@ -67,7 +67,7 @@
             </div>
         </div>
         <div class="row mt-0 gy-5 gx-5">
-            <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3">
+            <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3 col-sm-8">
                 <div class="card">
                     <img src="img/books/alchemist.jpg" class="card-img-top book-image-card-height" alt="book_image">
                     <div class="card-body">
@@ -79,7 +79,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3">
+            <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3 col-sm-8">
                 <div class="card">
                     <img src="img/books/monk_old.jpg" class="card-img-top book-image-card-height" alt="book_image">
                     <div class="card-body">
@@ -91,7 +91,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3">
+            <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3 col-sm-8">
                 <div class="card">
                   <img src="img/books/power_mind.jpg" class="card-img-top book-image-card-height" alt="book_image">
                   <div class="card-body">
@@ -102,7 +102,7 @@
                   </div>
                 </div>
               </div>
-            <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3">
+            <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3 col-sm-8">
                 <div class="card">
                     <img src="img/books/ghl.jpg" class="card-img-top book-image-card-height" alt="book_image">
                     <div class="card-body">
