--- a/book_single_hp_2.html
+++ b/book_single_hp_2.html
@@ -75,7 +75,7 @@
             </div>
         </div>
         <div class="row mt-0 gy-5 gx-5">
-            <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3">
+            <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3 col-sm-8">
                 <div class="card">
                     <img src="img/books/hp_1.jpg" class="card-img-top book-image-card-height" alt="book_image">
                     <div class="card-body">
@@ -86,7 +86,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3">
+            <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3 col-sm-8">
                 <div class="card">
                     <img src="img/books/hp_1.jpg" class="card-img-top book-image-card-height" alt="book_image">
                     <div class="card-body">
@@ -97,7 +97,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3">
+            <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3 col-sm-8">
                 <div class="card">
                     <img src="img/books/hp_1.jpg" class="card-img-top book-image-card-height" alt="book_image">
                     <div class="card-body">
@@ -108,7 +108,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3">
+            <div class="col-4 col-md-6 col-lg-4 col-12 col-xl-3 col-sm-8">
                 <div class="card">
                     <img src="img/books/hp_1.jpg" class="card-img-top book-image-card-height" alt="book_image">
                     <div class="card-body">
