--- a/sign_up.html
+++ b/sign_up.html
@@ -23,7 +23,7 @@
       <div class="row">
         <div class="col-md-12">
           <div class="login">
-            <form class=" p-4 card">
+            <form class="p-4 card" action="index.html" onsubmit="return signUp()">
               <h3 class="text-center mb-4">Signup</h3>
               <div class="form-group mb-2">
                 <label for="">Phone number</label>
@@ -31,12 +31,14 @@
                   type="text"
                   class="form-control"
                   placeholder="Enter Phone number"
+                  id="phone"
                 />
               </div>
               <div class="form-group mb-2">
                 <label for="">Email</label>
                 <input
-                  type="email"
+                  type="text"
+                  id="auth_email"
                   class="form-control"
                   placeholder="Enter Email"
                 />
@@ -48,6 +50,8 @@
                 <input
                   type="password"
                   class="form-control"
+                  id="auth_password"
+                  oninput="passwordStrength()"
                   placeholder="Password"
                 />
               </div>
@@ -58,12 +62,23 @@
                 <input
                   type="password"
                   class="form-control"
+                  id="confirmPass"
+                  oninput="validateConfirmPass()"
                   placeholder="Confirm Password"
                 />
               </div>
 
+              <div class="form-group mb-2">
+                <ul class="ps-3">
+                  <li class="" id="min_chars">Minimum 8 characters</li>
+                  <li class="" id="one_upper_case">At least one uppercase</li>
+                  <li id="one_lower_case">One lower case</li>
+                  <li id="one_number_check">Contain at least one number</li>
+                </ul>
+              </div>
+
               <div class="mt-4">
-                <a class="btn w-100 login-button" href="/index.html">Signup</a>
+                <button class="btn w-100 login-button" type="submit">Signup</button>
 
                 <a href="/login.html" class=" w-100 text-center mt-3"
                   > Already a member?</a
@@ -74,5 +89,7 @@
         </div>
       </div>
     </div>
+
+    <script src="js/validation.js"></script>
   </body>
 </html>
